crates/icarus-macros/tests/compilation/fail/generic_function.stderr
error: Unsupported feature: Generic functions - Tool functions cannot have generic parameters
 --> tests/compilation/fail/generic_function.rs:5:16
  |
5 | fn generic_tool<T>(x: T) -> T {
  |                ^
